# oarepo-user-dashboard

./: MANIFEST.in  extract_messages.sh  format.sh  setup.cfg
oarepo_user_dashboard/: config.py  ext.py  proxies.py
oarepo_user_dashboard/authorities/: components.py  ext.py  ext_config.py
oarepo_user_dashboard/authorities/resources/: __init__.py  resource.py
oarepo_user_dashboard/records/jsonschemas/vocabularies/: dashboard-ext-v1.0.0.json
oarepo_user_dashboard/resources/: config.py  ui.py
oarepo_user_dashboard/resources/dashboard_type/: __init__.py  config.py  resource.py
oarepo_user_dashboard/resources/records/: ui.py
oarepo_user_dashboard/services/: config.py  service.py  type_ui_schema.py
oarepo_user_dashboard/services/custom_fields/: hierarchy.py
oarepo_user_dashboard/ui/: __init__.py  config.py  ext.py  proxies.py  views.py
oarepo_user_dashboard/ui/resources/: config.py  resource.py
oarepo_user_dashboard/ui/resources/dashboard_type/: config.py  resource.py
oarepo_user_dashboard/ui/templates/semantic-ui/oarepo_user_dashboard_ui/: VocabulariesDetail.jinja  base.html  communities.html  header.html  requests.html  uploads.html
oarepo_user_dashboard/ui/theme/: webpack.py
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/communities/: UserCommunities.jsx
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/components/: SearchBar.jsx  base.jsx  uploads.js
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/components/resultitems/communities/: CommunitiesResultItem.jsx  ComputerTabletCommunitiesResultItem.jsx  MobileCommunitiesResultItem.jsx
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/components/resultitems/requests/: ComputerTabletRequestsResultItem.jsx
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/components/resultitems/uploads/: ComputerTabletUploadsItem.jsx  MobileUploadsItem.jsx
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/requests/: UserRequests.jsx
oarepo_user_dashboard/ui/theme/assets/semantic-ui/js/oarepo_user_dashboard/search/uploads/: UserUploads.jsx
oarepo_user_dashboard/views/: api.py  app.py
tests/: conftest.py  test_uiedit.py
tests/complex-data/: onetime_transform_institutions.py
