[metadata]
name = oarepo-user-dashboard
version = 1.0.0
description = user dashboard for oarepo
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    invenio-vocabularies
    oarepo-runtime
    openpyxl
    oarepo-ui>=5.0.34
    cachetools
packages = find:
include_package_data = True

[options.extras_require]
dev =
    pytest>=7.1.2
    black
    autoflake
    isort
tests =
    pytest>=7.1.2
    pytest-mock
    pytest-invenio
oarepo-11 =
    oarepo>=11,<12
oarepo-12 =
    oarepo>=12,<13

[options.entry_points]
invenio_base.apps =
    oarepo_user_dashboard = oarepo_user_dashboard.ext:OARepoVocabularies
    oarepo_user_dashboard_ui = oarepo_user_dashboard.ui.ext:InvenioVocabulariesAppExtension
    oarepo_vocabulary_authorities = oarepo_user_dashboard.authorities.ext:OARepoVocabulariesAuthorities
invenio_base.api_apps =
    oarepo_user_dashboard = oarepo_user_dashboard.ext:OARepoVocabularies
    oarepo_user_dashboard_ui = oarepo_user_dashboard.ui.ext:InvenioVocabulariesAppExtension
    oarepo_vocabulary_authorities = oarepo_user_dashboard.authorities.ext:OARepoVocabulariesAuthorities
invenio_jsonschemas.schemas =
    oarepo_user_dashboard = oarepo_user_dashboard.records.jsonschemas
invenio_base.blueprints =
    oarepo_ui = oarepo_user_dashboard.views.app:create_app_blueprint
    oarepo_user_dashboard_ui = oarepo_user_dashboard.ui.views:create_blueprint
    oarepo_vocabulary_type_ui = oarepo_user_dashboard.ui.views:create_vocabulary_type_blueprint
invenio_base.api_blueprints =
    oarepo_vocabulary_type_api = oarepo_user_dashboard.views.api:create_api_blueprint
    oarepo_vocabulary_authorities = oarepo_user_dashboard.authorities.views:create_authorities_blueprint
invenio_assets.webpack =
    oarepo_user_dashboard_ui_theme = oarepo_user_dashboard.ui.theme.webpack:theme
oarepo.ui = oarepo_user_dashboard_ui = oarepo_user_dashboard.models:ui.json
invenio_i18n.translations = oarepo_user_dashboard_ui = oarepo_user_dashboard

[oarepo.i18n]
languages =
    cs
    en

# List of paths to scan for babel messages - python files and jinja templates are scanned
babel_source_paths =
    oarepo_user_dashboard/

# List of paths to scan for i18next messages - javascript and jsx files are scanned
i18next_source_paths =
    oarepo_user_dashboard/ui/theme/assets/semantic-ui/js

# this is the location where python translations are generated.
babel_output_translations =
    oarepo_user_dashboard/translations

# this is the location where javascript translations are generated. Add this directory to webpack
# aliases
i18next_output_translations =
    oarepo_user_dashboard/ui/theme/assets/semantic-ui/translations/oarepo_user_dashboard_ui

[options.packages.find]
exclude = tests

[tool:pytest]
testpaths =
    tests

